updated run to reflect the fact that user put input only to relevant input variables. and more